# honyaku

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  evaluate.py  generate.py  pyproject.toml  requirements.txt  run_quality_evaluation.sh  run_response_generation.py  run_response_generation.sh  run_translation.py  run_translation_quality.py  translate.py  utils.py
configs/quality_evaluation/: beavertails_it_cometkiwi-23.yaml  beavertails_it_metricx-24.yaml  beavertails_it_xcomet.yaml
honyaku/: data.py  inference.py  logger.py  translation.py
honyaku/inference/: __init__.py  transformers.py
honyaku/metrics/: comet.py  metricx.py  quality.py
honyaku/translation/: utils.py
metrics/: comet.py  metric.py  metricx.py
notebooks/: 01_dataset.ipynb  02_translation_scores.ipynb  03_translation_checks.ipynb  04_table_scores.ipynb  05_upload_translations.ipynb
notebooks/utils/: checks.py  datasets.py  stats.py
scripts/: run_mt_generation.sh  run_mt_quality_eval.sh  run_response_generation.sh
src/: data.py  inference.py
src/inference/: transformers.py  vllm.py
src/metrics/: comet.py  metricx.py  quality.py
src/translation/: utils.py
tests/inference/: test_generate.py
