[tool.poetry]
name = "honyaku-it"
version = "0.1.0"
description = "Machine translation and evaluation"
authors = ["saiteki-kai <giuseppe.magazu@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "honyaku" }]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.12"
datasets = "^3.2.0"
transformers = "^4.48.3"
accelerate = "^1.3.0"
tqdm = "^4.67.1"
unbabel-comet = "^2.2.4"
vllm = "^0.7.2"

[tool.poetry.group.notebook.dependencies]
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"
seaborn = "^0.13.2"

[tool.ruff]
line-length = 120
exclude = ["honyaku/metrics/metricx"]

[tool.ruff.lint.isort]
known-first-party = ["honyaku"]
known-third-party = ["metricx"]
lines-after-imports = 2
