[tool.poetry]
name = "honyaku-it"
version = "0.1.0"
description = "Machine translation and evaluation"
authors = ["saiteki-kai <giuseppe.magazu@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "honyaku" }]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.12"
datasets = "^3.2.0"
transformers = "^4.48.3"
accelerate = "^1.3.0"
tqdm = "^4.67.1"
unbabel-comet = "^2.2.4"
torch = "2.5.1"
vllm = "^0.7.3"

[tool.poetry.group.notebook.dependencies]
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.6"

[tool.ruff]
line-length = 120
fix = true
show-fixes = true
exclude = ["honyaku/metrics/metricx"]

[tool.ruff.lint.isort]
known-first-party = ["honyaku"]
known-third-party = ["metricx"]
lines-after-imports = 2
lines-between-types = 1
combine-as-imports = true

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "C90",
    "UP",
    "S",
    "B",
    "A",
    "COM",
    "C4",
    "T10",
    "RET",
    "ARG",
    "PIE",
    "PGH",
    "TRY",
    "PLR",
    "SIM",
    "PTH",
    "NPY",
    "RUF",
    "SLF001",
]
ignore = ["TRY003", "COM812"]
